# rakutenapi_marketprice

./: .gitignore  CLAUDE.md  Dockerfile  Marketprice_per_shopthingy.py  README.md  SCRAPER_GUIDE.md  app.py  compose.yml  debug_pckoubou.py  dev.py  devcontainer.json  gemini_app.py  main.py  pckoubou.py  pcwrapscrape.py  pyproject.toml  requirements.txt  scraper.py  scraperservice.py  test_pipeline.py
.claude/commands/: gh-status.md  lint.md  load-context.md  run-tests.md  save-context.md
.claude/context/: latest.md
.claude/rules/: polars-only.md
.claude_md_files/: latest.md  load-context.md  polars-only.md  status.md
.devcontainer/: devcontainer.json
.github/workflows/: scraper.yaml  scraper.yml
dockerstuff/: Dockerfile
docs/: rakuten_filter.md
src/: Marketprice.py  Marketprice2.py  Marketprice3.py  Marketprice_per_shop.py  aiprocess.py  aiprocess_1.py  cleanzentohan.py  extract_specs.py  extract_specs_1.py  kakakucom_scrape.py  manualrakutenapi.json  pcbaruscrape.py  pckoboscrape.py  pckoubou.py  pcwrapscrape.py  processor.py  qualitscrape.py  rakuten_api.py  savetosupabase.py  sofmapscrape.py  sofmapscrape_copy.py  sofmapscrape_used.py  spec_extractor.py
src/dashboard/: app.py
src/database/: client.py  repository.py
src/features/: builder.py  cpu_benchmark.py  model_extractor.py  transformers.py
src/models/: __init__.py  evaluation.py  optimizer.py  price_model.py  survival_model.py  train.py
src/pipeline/: __init__.py  backfill_models.py  retrain.py  score.py
src/scrapers/: rakuten_filter.py
src/utils/: logging.py
tests/: conftest.py
(+21 files in other folders)
