[project]
name = "rakuten-used-computer-finder"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "lightgbm>=4.3.0",
    "numpy>=1.26.0",
    "playwright>=1.58.0",
    "plotly>=6.6.0",
    "polars>=1.38.1",
    "pytz>=2026.1.post1",
    "rapidfuzz>=3.14.3",
    "regex>=2026.2.28",
    "scikit-learn>=1.4.0",
    "streamlit>=1.55.0",
    "supabase>=2.28.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "ruff>=0.15.2",
]

[tool.pytest.ini_options]
pythonpath = ["."]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I"]   # pycodestyle, pyflakes, isort
ignore = ["E501"]           # line too long (handled by formatter)

